# audio-dsp-pipeline

./: CMakeLists.txt  README.md
include/: audio.hpp  fir.hpp  pipeline.hpp  timer.hpp  wav.hpp
scripts/: plot_fft.py
src/: fir.cpp  main.cpp  pipeline.cpp  timer.cpp  wav.cpp
